[b]Version 0.6.0rc1 (not released yet)[/b]:

(2008-01-22)
 * Now the delay to update the video while dragging the time slider can
   be configured in smplayer.ini, option time_slider_drag_delay. The
   value by default is 100 (milliseconds).

(2008-01-21)
 * Added some new icons to the default theme taken from nuvoX 
   (http://www.kde-look.org/content/show.php/nuvoX?content=38467)

(2008-01-18)
 * "Help->Command line options" now shows an html text, so it looks better.

(2008-01-17)
 * Added "Help->Command line options", which shows a text with help about
   the available command line options. It displays the same as smplayer -h
   but it will useful for Windows users, as smplayer -h doesn't work for 
   them.

(2008-01-16)
 * Now "Stay on top" is made properly, not cleaning the other flags.
 * The Makefile installs the files in docs/ru
 * Fixed a bug: Help->FAQ displayed the FAQ in the locale language and not
   in the language set in smplayer.
 * Now all the gpl.html in docs/ should be in UTF-8.
 * Converted docs/es/gpl.html and docs/de/gpl.html to UTF-8.
 * Added docs/ru/gpl.html.

(2008-01-15)
 * Now the colorkey is passed properly to mplayer.
 * Added a new option: Options->Visualize motion vectors (-lavdopts vismv=7).

(2008-01-14)
 * Added gl:yuv=3:lscale=1 in the video output combo in preferences.

(2008-01-10)
 * Added an icon in the Instances tab so it doesn't look so empty 
   (instance1.png and instance2.png).
 * Moved the seeking options in the Interface section to another tab.

(2008-01-09)
 * Added the possibility to update the position of video while
   dragging the time slider (instead of updating it only when the
   slider has been released). Currently it's only possible to
   enable this option by changing the option update_while_seeking in
   smplayer.ini. There'll be an option in preferences soon.
 * Added an option in Preferences->Interface to configure that option.

(2008-01-08)
 * Added an icon for Help->FAQ (faq.png).